// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Messages should render correctly 1`] = `
<View
  className="MessagesContainer"
>
  <View
    className="Messages"
  >
    <View
      key="0"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        className="userMsg"
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "fuchsia",
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Username
      </Text>
    </View>
    <View
      className="neighborsMsg"
      key="1"
      style={
        Object {
          "backgroundColor": "navy",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Other Mesg
      </Text>
    </View>
  </View>
  <View
    className="IsTypingContainer"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      className="isTyping"
      ellipsizeMode="tail"
    >
      this.renderTyping()
    </Text>
  </View>
</View>
`;

exports[`Messages should render correctly 1`] = `
<View
  className="MessagesContainer"
>
  <View
    className="Messages"
  >
    <View
      key="0"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        className="userMsg"
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "fuchsia",
          }
        }
      >
        hello Achim
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Username
      </Text>
    </View>
    <View
      className="neighborsMsg"
      key="1"
      style={
        Object {
          "backgroundColor": "navy",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        hello Andrea
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Other Mesg
      </Text>
    </View>
  </View>
  <View
    className="IsTypingContainer"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      className="isTyping"
      ellipsizeMode="tail"
    >
      this.renderTyping()
    </Text>
  </View>
</View>
`;

exports[`Very Long Messages should render correctly 1`] = `
<View
  className="MessagesContainer"
>
  <View
    className="Messages"
  >
    <View
      key="0"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        className="userMsg"
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "fuchsia",
          }
        }
      >
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Username
      </Text>
    </View>
    <View
      className="neighborsMsg"
      key="1"
      style={
        Object {
          "backgroundColor": "navy",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Other Mesg
      </Text>
    </View>
  </View>
  <View
    className="IsTypingContainer"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      className="isTyping"
      ellipsizeMode="tail"
    >
      this.renderTyping()
    </Text>
  </View>
</View>
`;
